force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__BillNameatPrintENG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillNameatPrintENG__c</fullName>
    <label>Bill Name at Print(ENG)</label>
    <type>TextArea</type>
</CustomField>