force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeUnit__c</fullName>
    <label>Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__UnitType</valueSetName>
    </valueSet>
</CustomField>