force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__CONTRACT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CONTRACT__c</fullName>
    <label>CONTRACT</label>
    <referenceTo>clofor_com_cfs__Contract__c</referenceTo>
    <relationshipLabel>Contract+Products</relationshipLabel>
    <relationshipName>Contract_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>