force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__CurrencySelling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CurrencySelling__c</fullName>
    <label>Currency-Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Currency</valueSetName>
    </valueSet>
</CustomField>