force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__PlanChargeQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanChargeQuantity__c</fullName>
    <label>Plan Charge Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>