force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__PlanNetWeightMT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanNetWeightMT__c</fullName>
    <label>Plan Net Weight(MT)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>