force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__PlanTotalAmountofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanTotalAmountofSellingFCY__c</fullName>
    <formula>clofor_com_cfs__PlanChargeQuantity__c   *  clofor_com_cfs__UnitPriceofSellingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Total Amount of Selling(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>