force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PRODUCT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRODUCT</label>
    <referenceTo>clofor_com_cfs__PRODUCT__c</referenceTo>
    <relationshipLabel>Contract+Products</relationshipLabel>
    <relationshipName>Contract_Products</relationshipName>
    <type>Lookup</type>
</CustomField>