force-app/main/default/objects/clofor_com_cfs__ContractProduct__c/fields/clofor_com_cfs__UnitPriceofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnitPriceofSellingFCY__c</fullName>
    <label>Unit Price of Selling(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>